2025.03.06 강휘 title.korean_sort 대신 title_sort+파이썬 돌려야함